--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react_demo",
+  "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "antd": "^3.8.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
